[Gc8EZpDO] Clean up some usages of getId() which is deprecated (#499)